# WinESP32

./: CMakeLists.txt  README.md  build.bat  flash.bat  flash_and_monitor.bat  monitor.bat  partitions.csv  sdkconfig.defaults
assets/converted/: CodeProVariable.c  assets.h  font_cyrillic.h  img_2048.c  img_accessibility.c  img_bliss.c  img_bluetooth.c  img_calculator.c  img_camera.c  img_clock.c  img_con.c  img_ethernet.c  img_explorer.c  img_file.c  img_flappy.c  img_flappy_pipe.c  img_folder.c  img_information.c  img_logo.c  img_memory.c  img_microphone.c  img_minesweeper.c  img_my_computer.c  img_network.c  img_notepad.c  img_paint.c  img_personalization.c  img_photo.c  img_photoview.c  img_settings.c  img_snake.c  img_start_button.c  img_start_button11.c  img_start_buttonxp.c  img_startup.c  img_startup_frame_01.c  img_startup_frame_02.c  img_startup_frame_03.c  img_startup_frame_04.c  img_startup_frame_05.c  (+35 more)
components/drivers/: CMakeLists.txt
components/drivers/display/: esp_lcd_st7701.h  st7701_driver.cpp  st7701_driver.h  st7701_lcd.cpp
components/drivers/touch/: gt911_driver.cpp  gt911_driver.h  gt911_touch.cpp  gt911_touch.h
components/duktape/: CMakeLists.txt  duktape_esp32.c  duktape_esp32.h
main/: CMakeLists.txt  bluetooth_transfer.cpp  bluetooth_transfer.h  boot_button.cpp  boot_button.h  cities_data.h  idf_component.yml  lvgl_port.cpp  lvgl_port.h  main.cpp  recovery_sysinfo.cpp  recovery_sysinfo.h  recovery_trigger.cpp  recovery_trigger.h  recovery_ui.cpp  recovery_ui.h  system_settings.cpp  system_settings.h  weather_api.cpp  weather_api.h
main/hardware/: hardware.cpp  hardware.h
main/ui/: apps.cpp  fonts.h  settings_extended.cpp  system_tray.cpp  win32_ui.cpp  win32_ui.h
utils/: convert_assets.py
