idf_component_register(
    SRCS 
        "main.cpp"
        "lvgl_port.cpp"
        "system_settings.cpp"
        "weather_api.cpp"
        "recovery_trigger.cpp"
        "boot_button.cpp"
        "recovery_sysinfo.cpp"
        "recovery_ui.cpp"
        "bluetooth_transfer.cpp"
        "ui/win32_ui.cpp"
        "ui/apps.cpp"
        "ui/system_tray.cpp"
        "ui/settings_extended.cpp"
        "hardware/hardware.cpp"
        # App icons (48x48)
        "../assets/converted/img_accessibility.c"
        "../assets/converted/img_calculator.c"
        "../assets/converted/img_camera.c"
        "../assets/converted/img_clock.c"
        "../assets/converted/img_con.c"
        "../assets/converted/img_ethernet.c"
        "../assets/converted/img_explorer.c"
        "../assets/converted/img_folder.c"
        "../assets/converted/img_my_computer.c"
        "../assets/converted/img_network.c"
        "../assets/converted/img_notepad.c"
        "../assets/converted/img_paint.c"
        "../assets/converted/img_personalization.c"
        "../assets/converted/img_photoview.c"
        "../assets/converted/img_settings.c"
        "../assets/converted/img_trashbinempty.c"
        "../assets/converted/img_trashbinfull.c"
        "../assets/converted/img_user.c"
        "../assets/converted/img_weather.c"
        "../assets/converted/img_microphone.c"
        "../assets/converted/img_taskmgr.c"
        "../assets/converted/img_snake.c"
        "../assets/converted/img_vscode.c"
        "../assets/converted/img_file.c"
        "../assets/converted/img_photo.c"
        "../assets/converted/img_unkown.c"
        # New game icons
        "../assets/converted/img_tetris.c"
        "../assets/converted/img_2048.c"
        "../assets/converted/img_minesweeper.c"
        "../assets/converted/img_tictactoe.c"
        "../assets/converted/img_memory.c"
        # Flappy Bird game assets
        "../assets/converted/img_flappy.c"
        "../assets/converted/img_flappy_background.c"
        "../assets/converted/img_flappy_pipe.c"
        # System icons (20x20)
        "../assets/converted/img_bluetooth.c"
        "../assets/converted/img_information.c"
        "../assets/converted/img_warning.c"
        "../assets/converted/img_wifi.c"
        # UI elements
        "../assets/converted/img_start_button.c"
        "../assets/converted/img_start_button11.c"
        "../assets/converted/img_start_buttonxp.c"
        "../assets/converted/img_startup.c"
        "../assets/converted/img_windows_logo.c"
        "../assets/converted/img_logo.c"
        # Wallpapers (240x400 RGB565)
        "../assets/converted/img_win7.c"
        "../assets/converted/img_win8.c"
        "../assets/converted/img_win10.c"
        "../assets/converted/img_win11.c"
        "../assets/converted/img_winvista.c"
        "../assets/converted/img_winxp.c"
        "../assets/converted/wallpapers_list.c"
        # Startup animation frames (17 frames, 120x160, RGB565 optimized)
        "../assets/converted/startup_frames.c"
        "../assets/converted/img_startup_frame_01.c"
        "../assets/converted/img_startup_frame_02.c"
        "../assets/converted/img_startup_frame_03.c"
        "../assets/converted/img_startup_frame_04.c"
        "../assets/converted/img_startup_frame_05.c"
        "../assets/converted/img_startup_frame_06.c"
        "../assets/converted/img_startup_frame_07.c"
        "../assets/converted/img_startup_frame_08.c"
        "../assets/converted/img_startup_frame_09.c"
        "../assets/converted/img_startup_frame_10.c"
        "../assets/converted/img_startup_frame_11.c"
        "../assets/converted/img_startup_frame_12.c"
        "../assets/converted/img_startup_frame_13.c"
        "../assets/converted/img_startup_frame_14.c"
        "../assets/converted/img_startup_frame_15.c"
        "../assets/converted/img_startup_frame_16.c"
        "../assets/converted/img_startup_frame_17.c"
        # Custom fonts
        "../assets/converted/CodeProVariable.c"
    INCLUDE_DIRS 
        "."
        "hardware"
        "../assets/converted"
    REQUIRES 
        nvs_flash
        esp_timer
        driver
        esp_lcd
        lvgl
        drivers
        littlefs
        fatfs
        sdmmc
        esp_wifi
        esp_netif
        esp_event
        esp_http_client
        json
        mbedtls
        spi_flash
        app_update
        bt
        esp_hosted
        duktape
)
